Add button to clear canvas

--- a/www/index.html
+++ b/www/index.html
@@ -22,8 +22,11 @@
     </style>
   </head>
   <body>
-    <button id="play-pause"></button>
     <div id="fps"></div>
+    <div>
+      <button id="play-pause"></button>
+      <button id="clear">Clear</button>
+    </div>
     <canvas id="game-of-life-canvas"></canvas>
     <script src="./bootstrap.js"></script>
   </body>
