--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,7 @@
     <div>
       <button id="play-pause"></button>
       <button id="clear">Clear</button>
+      <button id="reset">Reset</button>
     </div>
     <canvas id="game-of-life-canvas"></canvas>
     <script src="./bootstrap.js"></script>
